AC_INIT([enigma2-plugin-extensions-subssupport], [1.5.9], [mx3ldev@gmail.com])

AM_INIT_AUTOMAKE
AC_PROG_CC
AM_PATH_PYTHON

AC_PATH_PROG(MSGFMT, msgfmt, AC_MSG_ERROR(Could not find msgfmt))

AC_CONFIG_FILES([
Makefile
plugin/Makefile
plugin/seekers/Makefile
plugin/seekers/PrijevodiOnline/Makefile
plugin/seekers/Novalermora/Makefile
plugin/seekers/Edna/Makefile
plugin/seekers/Elsubtitle/Makefile
plugin/seekers/Indexsubtitle/Makefile
plugin/seekers/Itasa/Makefile
plugin/seekers/Moviesubtitles/Makefile
plugin/seekers/Moviesubtitles2/Makefile
plugin/seekers/MySubs/Makefile
plugin/seekers/OpenSubtitles/Makefile
plugin/seekers/OpenSubtitles2/Makefile
plugin/seekers/OpenSubtitlesMora/Makefile
plugin/seekers/Podnapisi/Makefile
plugin/seekers/SerialZone/Makefile
plugin/seekers/Subdl/Makefile
plugin/seekers/Subscene/Makefile
plugin/seekers/Subscenebest/Makefile
plugin/seekers/Subsource/Makefile
plugin/seekers/SubtitlesGR/Makefile
plugin/seekers/Subsyts/Makefile
plugin/seekers/Subtitlecat/Makefile
plugin/seekers/Subtitlesmora/Makefile
plugin/seekers/Subtitlist/Makefile
plugin/seekers/Titlovi/Makefile
plugin/seekers/Titulky/Makefile
plugin/parsers/Makefile
plugin/img/Makefile
plugin/img/countries/Makefile
locale/Makefile

])
AC_OUTPUT
