AC_INIT([enigma2-plugin-extensions-subssupport], [1.7.0], [mx3ldev@gmail.com])

AM_INIT_AUTOMAKE
AC_PROG_CC
AM_PATH_PYTHON

AC_PATH_PROG(MSGFMT, msgfmt, AC_MSG_ERROR(Could not find msgfmt))

AC_CONFIG_FILES([
Makefile
plugin/Makefile
plugin/seekers/Makefile
plugin/seekers/Elsubtitle/Makefile
plugin/seekers/Foursub/Makefile
plugin/seekers/Indexsubtitle/Makefile
plugin/seekers/LocalDrive/Makefile
plugin/seekers/Moviesubtitles/Makefile
plugin/seekers/MySubs/Makefile
plugin/seekers/Novalermora/Makefile
plugin/seekers/OpenSubtitles/Makefile
plugin/seekers/OpenSubtitles2/Makefile
plugin/seekers/OpenSubtitlesMora/Makefile
plugin/seekers/Podnapisi/Makefile
plugin/seekers/PrijevodiOnline/Makefile
plugin/seekers/Sub_Scene_com/Makefile
plugin/seekers/Subdl/Makefile
plugin/seekers/Subscenebest/Makefile
plugin/seekers/Subsource/Makefile
plugin/seekers/Subsyts/Makefile
plugin/seekers/Subtitlecat/Makefile
plugin/seekers/Subtitlesmora/Makefile
plugin/seekers/Titlovi/Makefile
plugin/seekers/Titulky/Makefile
plugin/seekers/Ytssubs/Makefile
plugin/parsers/Makefile
plugin/img/Makefile
plugin/img/countries/Makefile
locale/Makefile

])
AC_OUTPUT
