SUBDIRS = Edna Elsubtitle Indexsubtitle Itasa Moviesubtitles Moviesubtitles2 MySubs OpenSubtitles OpenSubtitles2 Podnapisi SerialZone Subdl Subscene Subsyts Subtitlecat SubtitlesGR Subtitlesmora Subtitlist Titlovi Titulky

installdir = $(libdir)/enigma2/python/Plugins/Extensions/SubsSupport/seekers
install_PYTHON = __init__.py seeker.py utilities.py xbmc_subtitles.py
