SUBDIRS = Elsubtitle Foursub Indexsubtitle LocalDrive Moviesubtitles MySubs Novalermora OpenSubtitles2 OpenSubtitlesMora Podnapisi PrijevodiOnline Sub_Scene_com Subdl Subscenebest Subsource Subsyts Subtitlecat Subtitlesmora Titlovi Titulky Ytssubs

installdir = $(libdir)/enigma2/python/Plugins/Extensions/SubsSupport/seekers
install_PYTHON = __init__.py seeker.py utilities.py xbmc_subtitles.py
