SUBDIRS = Elsubtitle Foursub Indexsubtitle LocalDrive Moviesubtitles MySubs Novalermora OpenSubtitles2 Podnapisi PrijevodiOnline Sub_Scene_com Subdl Subsource Subsyts Subtitlecat Subtitlesmora Titlovi Titulky Ytssubs Subf2mSeeker

installdir = $(libdir)/enigma2/python/Plugins/Extensions/SubsSupport/seekers
install_PYTHON = __init__.py seeker.py utilities.py xbmc_subtitles.py
